--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -3,56 +3,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kangning.basecapsule.InputActivity"
-    android:focusable="true">
+    tools:context="com.example.kangning.basecapsule.scan.InputActivity">
 
     <LinearLayout
         android:id="@+id/bottom_input_layout"
         android:layout_width="match_parent"
-        android:background="#ffffff"
         android:layout_height="54dp"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:focusable="true">
+        android:background="#ffffff"
+        android:orientation="horizontal">
 
-       <LinearLayout
-           android:layout_width="60dp"
-           android:layout_height="match_parent"
-           android:orientation="vertical"
-           android:gravity="center">
-           
-           <ImageView
-               android:layout_width="22dp"
-               android:layout_height="16dp"
-               android:src="@drawable/keyboard"/>
-           
-           <TextView
-               android:layout_marginTop="6dp"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="数字输入"
-               android:textSize="9sp"
-               android:textColor="#666666"
-               />
-           
-       </LinearLayout>
-        <EditText
-            android:background="#ffffff"
+        <LinearLayout
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="22dp"
+                android:layout_height="16dp"
+                android:src="@drawable/keyboard" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:text="数字输入"
+                android:textColor="#666666"
+                android:textSize="9sp" />
+
+        </LinearLayout>
+
+        <com.example.kangning.basecapsule.scan.BackHandleEditText
             android:id="@+id/input_edit"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#ffffff"
             android:focusable="true" />
 
         <Button
-            android:layout_marginRight="10dp"
             android:id="@+id/submit"
             android:layout_width="80dp"
             android:layout_height="36dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/button_yellow_back"
             android:text="确认"
             android:textColor="#292929"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
     </LinearLayout>
 </RelativeLayout>
 
