--- a/app/src/main/res/layout/camera_scanner_view.xml
+++ b/app/src/main/res/layout/camera_scanner_view.xml
@@ -48,7 +48,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/input_text"
+                    android:id="@+id/input_icon"
                     android:layout_width="56dp"
                     android:layout_height="56dp"
                     android:scaleType="centerCrop"
